2005-07-18  Laurent Sansonetti  <lrz@gnome.org>

	* AUTHORS,
	  lib/alexandria.rb:

	Added Jiri.

2005-07-14  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/macui/BookIconCell.m:

	Correctly truncates book titles, the previous implementation was not
	working all the time.

2005-07-13  Laurent Sansonetti  <lrz@gnome.org>

	* alexandria.xcode/.cvsignore,
	  alexandria.xcode/project.pbxproj,
	  alexandria.xcodeproj/.cvsignore,
	  alexandria.xcodeproj/project.pbxproj:

	- Switching to Xcode 2.1 (.xcode -> .xcodeproj) ;
	- The build target in Xcode now generates an all-in-one binary. 

	* lib/alexandria.rb,
	  lib/alexandria/macui.rb,
	  lib/alexandria/macui/Info.plist,
	  lib/alexandria/macui/Matrix.rb,
	  lib/alexandria/macui/main.m,
	  lib/alexandria/macui/main.rb:

	- Follow latest change ;
	- When clicking on a selected cell in the matrix with the shift key
	  pressed at the same time, deselect the cell.

2005-07-10  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/macui/MainController.rb,
	  lib/alexandria/macui/Matrix.rb,
	  lib/alexandria/macui/Utils.m,
	  lib/alexandria/macui/MainWindow.nib/info.nib,
	  lib/alexandria/macui/MainWindow.nib/keyedobjects.nib:

	- Added autoscroll in the matrix ;
	- Improved performances of the new selection ;
	- Fixed a lot of small bugs.

2005-07-05  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/macui/MainController.rb,
	  lib/alexandria/macui/Matrix.rb:

	Overrides the selection drawing of the matrix to mimic the Finder.

2005-07-04  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/macui/MainController.rb,
	  lib/alexandria/macui/Matrix.rb,
	  lib/alexandria/macui/MainWindow.nib/info.nib,
	  lib/alexandria/macui/MainWindow.nib/keyedobjects.nib:

	Finally fixed the matrix to accept to be the key view of the window.

2005-07-03  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/export_library.rb:

	Removed a duplicated 'EOS' statement introduced in the previous commit.
